--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Deploy React Vite to GitHub Pages
+name: Deploy React Vite + Tailwind to GitHub Pages
 
 on:
   push:
@@ -10,23 +10,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Checkout your repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # 2️⃣ Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'   # Use your Node version
+          node-version: '20'
           cache: 'npm'
 
+      # 3️⃣ Install dependencies (exact versions)
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
+      # 4️⃣ Build project (force Vite to rebuild)
       - name: Build project
-        run: npm run build
+        run: npm run build -- --force
 
+      # 5️⃣ Deploy to GitHub Pages (force overwrite old files)
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v6
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
+          force_orphan: true
