--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,35 +3,30 @@ name: Deploy React Vite + Tailwind to GitHub Pages
 on:
   push:
     branches:
-      - main   # Trigger on push to main branch
+      - main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout your repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2️⃣ Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20'
           cache: 'npm'
 
-      # 3️⃣ Install dependencies (exact versions)
       - name: Install dependencies
         run: npm ci
 
-      # 4️⃣ Build project (force Vite to rebuild)
       - name: Build project
         run: npm run build -- --force
 
-      # 5️⃣ Deploy to GitHub Pages (force overwrite old files)
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v6
+        uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
